# InertiaFree-QSM

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: 100kW_system.yml  case_1_settings.yml  comparing_luchsinger_settings.yml  comparing_profiles_settings.yml  kitepower V3_20.yml  kitepower V3_25.yml  kitepower V3_Mark.yml  kitepower V3_MarkPhD.yml  kitepower V3_MarkVal.yml  kitepower V3_test.yml  operational_constraints_case_1.yml  power_law_case_1.yml  simulation_settings.yml  simulation_settings_Mark.yml  simulation_settings_MarkVal.yml  simulation_settings_Oriol.yml  simulation_settings_config.yml  soft_kite_pumping_ground_gen_system.yml  wind_resource.yml  wind_resource20.yml  wind_resource6.yml
data/settings/: example_settings.yml
data/systems/: kitepower V3_25.yml
data/wind_resource/: clustered_case_1.yml  power_law_case_1.yml  wind_profile_prescribed_logarithmic.yml
results/: optimization_details.yml  power_curve_single_point.yml  power_curve_single_point_optimized.yml  power_curves_direct_simulation.yml  power_curves_optimized.yml  soft_kite_pumping_ground_gen_power_curves.yml
scripts/: calculate_power_curves.py  compare_timestep_results.py  plot_cycle_detail.py  plot_cycle_details.py  plot_power_curve.py  profile_optimization.py
src/inertiafree_qsm/: __init__.py  config_loader.py  cycle_optimizer.py  plotting.py  power_curve_constructor.py  power_curve_constructor2.py  power_curves.py  power_model.py  qsm.py  utils.py
